--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+  </head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AgoraPay – Social Web3 Wallet" />
