--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-  </head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="AgoraPay – Social Web3 Wallet" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
     <title>AgoraPay</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
-```
