--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="AgoraPay – Social Web3 Wallet" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="AgoraPay – Peer-to-Peer Pi Payments" />
     <title>AgoraPay</title>
+    <!-- ✅ Pi SDK production -->
+    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
