--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AgoraPay – Peer-to-Peer Pi Payments" />
+    <meta name="description" content="AgoraPay – Social Web3 Wallet for Pi Network" />
     <title>AgoraPay</title>
-    <!-- ✅ Pi SDK production -->
+    <link rel="icon" href="favicon.ico" />
+    <!-- Pi SDK -->
     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+    <!-- Add any external stylesheets here if needed -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Scripts will be injected by CRA build -->
   </body>
 </html>
