--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AgoraPay – Social Web3 Wallet for Pi Network" />
-    <title>AgoraPay</title>
-    <link rel="icon" href="favicon.ico" />
-    <!-- Pi SDK -->
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-    <!-- Add any external stylesheets here if needed -->
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>AgoraPay Test</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Scripts will be injected by CRA build -->
+
+    <!-- Nhúng Pi SDK trước React bundle -->
+    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
   </body>
 </html>
